# sample-maverick-project

./: .gitignore  CLAUDE.md  README.md  fly-beads-session.jsonl  maverick-copilot.yaml  maverick.test.yaml  maverick.yaml  pyproject.toml  refuel-session.jsonl  test-flight-plan-e2e-claude.sh  test-flight-plan-e2e-copilot.sh  test-flight-plan-e2e.sh  test-fly-beads.sh  test-fly-feature.sh  test-fly.sh  test-refuel-beads.sh  test-refuel-speckit.sh  test.sh
.beads/: dolt-server.activity  issues.jsonl  metadata.json
.beads/backup/: backup_state.json  config.jsonl  events.jsonl  issues.jsonl
.maverick/checkpoints/feature/: phase_0_complete.json  phase_10_complete.json  phase_11_complete.json  phase_12_complete.json  phase_1_complete.json  phase_2_complete.json  phase_3_complete.json  phase_4_complete.json  phase_5_complete.json  phase_6_complete.json  phase_7_complete.json  phase_8_complete.json  phase_9_complete.json
.maverick/runway/: index.json
.maverick/runway/episodic/: bead-outcomes.jsonl
.specify/memory/: constitution.md
docs/: greet-cli-prd.md
scripts/: reset-repo.sh  test-setup.sh
specs/001-greet-cli/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-greet-cli/checklists/: requirements.md
specs/001-greet-cli/contracts/: cli-interface.md
src/greet/: __init__.py  cli.py  core.py  fortunes.py  languages.py  output.py
src/greet/renderers/: __init__.py  box.py  cowsay.py  (+2 more)
tests/: conftest.py  test_init.py
tests/unit/: test_box.py  test_cli.py  test_core.py  test_cowsay.py  test_effects.py  test_figlet.py  test_fortunes.py  test_languages.py  test_output.py
